--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL="postgresql://Ismaelp96:s8JVChmjS4eD@ep-mute-truth-92222875-pooler.us-east-2.aws.neon.tech/auth-tutorial?sslmode=require&pgbouncer=true"
 DIRECT_URL="postgresql://Ismaelp96:s8JVChmjS4eD@ep-mute-truth-92222875.us-east-2.aws.neon.tech/auth-tutorial?sslmode=require"
+AUTH_SECRET="77afc63892c702be6073229a1e04f793"
