--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ GITHUB_CLIENT_SECRET=c3569f3a61ea4da5ef1872af90c93ab979b67c6b
 
 GOOGLE_CLIENT_ID=598482470213-soq7qm7dhosmkv66qaphbo2olfbpnk4t.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+RESEND_API_KEY=re_ePY5bDC7_C1bMdxg1EEkrdENczrnE91hU
