--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ GOOGLE_CLIENT_ID=598482470213-soq7qm7dhosmkv66qaphbo2olfbpnk4t.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 
 RESEND_API_KEY=re_ePY5bDC7_C1bMdxg1EEkrdENczrnE91hU
+
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
